--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -20,6 +20,7 @@
 *Danish: [[fløjte]], [[hvisle]]
 *Dutch: [[fluiten]]
 {{trans-mid}}
+*Swedish: [[vissla]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|to move is such a way as to make a whistling sound}}
@@ -27,6 +28,7 @@
 *Danish: [[hvisle]]
 *Dutch: [[fluiten]]
 {{trans-mid}}
+*Swedish: [[vissla]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|Translations to be categorised}}
@@ -65,6 +67,7 @@
 {{trans-mid}}
 *Polish: [[gwizdek]] {{m}}
 *Portuguese: [[apito]] {{m}}
+*Swedish: [[vissla]] {{c}}, [[pipa]] {{c}}, [[visselpipa]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|sound made by whistling}}
@@ -77,6 +80,7 @@
 {{trans-mid}}
 *Polish: [[gwizd]] {{m}}
 *Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
+*Swedish: [[vissling]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|sound similar to the sound made by whistling}}
@@ -110,7 +114,6 @@
 *Russian: [[свисток]] (svistók) {{m}}
 *Spanish: [[silbato]] {{m}}
 *Swahili: [[kipenga]]
-*Swedish: [[visselpipa]]
 *[[Telugu]]: [[ఈల]] (eela), [[బూర]] (boora)
 {{trans-bottom}}
 
