--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -37,6 +37,7 @@ From {{OE.}} [[bindan]].
 *Portuguese: [[conectar]]
 *Spanish: [[atar]] (tie), [[empastar]] (books)
 {{bottom}}
+to have sex
 
 ===References===
 {{R:Century 1911}}
