--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -12,7 +12,7 @@ Japanese “Luck of Heaven”
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
 #* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
-#*: These professionals are the sort whose children play with '''Nintendos''' and own bikes 
+#*: These professionals are the sort whose children play with '''Nintendos''' and own bikes
 #* '''2005''', Larry L. Meyer, ''No Paltry Thing: Memoirs Of A Geezer Dad'', page 128
 #*: Franz: “How do elves make '''Nintendos'''?” Dad: “You ask all the hard questions, don't you? I really don't know.”
 #* '''2007''', Ilene Schneider, ''Chanukah Guilt'', page 106
@@ -24,6 +24,6 @@ Japanese “Luck of Heaven”
 This term may have trademark status.
 
 ====External links====
-{{pedialite}}
+* {{pedialite}}
 
 [[hu:Nintendo]]
