--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -8,9 +8,11 @@ MY-kro
 :Shortening of '''microcomputer'''
 
 ===Noun===
-'''micro'''
+{{en-noun}}
 
-#Short form of '''microcomputer'''
+#Short form of '''[[microcomputer]]'''
+
+[[category:computing]]
 
 ===See also===
 *[[micro-]]
