--- a/en/m/macedoine.801833.wikitext
+++ b/en/m/macedoine.801833.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{F.}} [[macédoine]]
+{{F.}} {{term|macédoine}}.
 
 ===Noun===
 {{en-noun}}
@@ -18,6 +18,8 @@
 
 ===See also===
 *[[macedonia]]
+
+[[Category:Salads]]
 
 [[io:macedoine]]
 [[nl:macedoine]]
