--- a/en/p/physiologic pH.741233.wikitext
+++ b/en/p/physiologic pH.741233.wikitext
@@ -1,3 +1,6 @@
-[[Category:Move to Wiktionary 2007-09]]
+==English==
 
-'''Physiologic pH''' is the [[pH]] that normally prevails in the human body. It's approximately 7.4.
+===Noun===
+{{en-noun|sg=[[physiologic]] [[pH]]|-}}
+
+# {{biochemistry}} The [[pH]] that normally prevails in the [[human]] [[body]]. It's approximately 7.4.
