--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -1,6 +1,13 @@
-[[Category:Move to Wiktionary 2007-09]]
-Term describing kin (relatives) 'on the father's side'.
+==English==
 
-Where the dominant way of describing inheritance in a society is through the mother's line ([[matrilineal]] inheritance), this will typically be balanced by particular ways of understanding the relationships with the father's (patrilateral) kin. This complementarity of kin reckoning is visible likewise in how [[patrilineal]]ly organised social groups will need to take account of [[matrilateral]] relationships.
+===Adjective===
+{{en-adj}}
 
-[[Category:Move to Wiktionary 2007-09]]
+# the kin (relatives) 'on the [[father]]'s side', (related to the father).
+#:''Jarius traditionally has patrilineal inheritance.''
+
+====Derived terms====
+*[[patrilineally]]
+
+====Related terms====
+*[matrilineal]]
