whoops eek...revisit that <patrilateral#3390557>

--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -3,11 +3,12 @@
 ===Adjective===
 {{en-adj}}
 
-# the kin (relatives) 'on the [[father]]'s side', (related to the father).
-#:''Jarius traditionally has patrilineal inheritance.''
+# The kin (relatives) 'on the [[father]]'s side' (related to the father).
+#:''Jim's blond hair is one of his patrilateral traits.''
 
 ====Derived terms====
-*[[patrilineally]]
+*[[patrilaterally]]
 
 ====Related terms====
-*[matrilineal]]
+*[[matrilineal]]
+*[[patrilateral]]
