--- a/en/p/patrilateral.746570.wikitext
+++ b/en/p/patrilateral.746570.wikitext
@@ -3,12 +3,12 @@
 ===Adjective===
 {{en-adj}}
 
-# The kin (relatives) 'on the [[father]]'s side' (related to the father).
-#:''Jim's blond hair is one of his patrilateral traits.''
+# From kin 'on the [[father]]'s side' (related to the father).
+#:''Jim's blond hair is one of his '''patrilateral''' traits.''
 
 ====Derived terms====
 *[[patrilaterally]]
 
 ====Related terms====
 *[[matrilineal]]
-*[[patrilateral]]
+*[[patrilineal]]
