--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{OE.}} [[bindan]].
+From {{OE.}} ''[[bindan]]''.
 
 ===Pronunciation===
 * {{IPA|/bʌɪnd/}}
@@ -37,6 +37,9 @@ From {{OE.}} [[bindan]].
 * Portuguese: [[conectar]]
 * Spanish: [[atar]] (tie), [[empastar]] (books)
 {{bottom}}
+
+====Derived terms====
+*[[bindweed]]
 
 ===References===
 {{R:Century 1911}}
