--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -51,7 +51,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 * Finnish: {{t-|fi|lupaus}}
 * French: {{t+|fr|gage|m}}
 * German: {{t+|de|Pfand|n}}
-* Hungarian: {{t-|hu|tagjelölt}}, {{t-|hu|áldomás}}
+* Hungarian: {{t-|hu|fogadalom}}
 * Italian: {{t+|it|giuramento|m}}, {{t-|it|pegno|m}}, {{t-|it|promessa solenne|f}}
 * Japanese: [[抵当]] (ていとう, teitō)
 {{trans-mid}}
@@ -69,6 +69,7 @@ From {{OF.}} ''[[plege]]'' (French: ''[[pleige]]'').
 
 {{trans-top|security to payment}}
 * Finnish: {{t-|fi|pantti}}
+* Hungarian: {{t-|hu|zálog}}
 * Italian: {{t+|it|avallo|m}}, {{t+|it|garanzia|f}}
 {{trans-mid}}
 * [[Telugu]]: [[తనఖా]] (tanakhaa)
