/* Dutch */ def -\+ <bepalingaankondigend voornaamwoord#3396745>

--- a/en/b/bepalingaankondigend voornaamwoord.4386.wikitext
+++ b/en/b/bepalingaankondigend voornaamwoord.4386.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''[[bepalingaankondigend]] [[voornaamwoord]]'''
 
-# {{context|grammar|lang=nl}} [[demonstrative pronoun]]
+# {{context|grammar|lang=nl}} a [[pronoun]] which announces that it should be immediately followed by a [[relative clause]]
 
 ====Examples====
 {{rfc-header|Examples}}
