--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{ELchar|[[θεωρία]]}}.
+From Greek thea(θέα)=view and oro(ορό)=look
 
 ===Pronunciation===
 *{{audio|en-us-theory.ogg|Audio (US)}}
