contents merged <partage#3403836>

--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -3,11 +3,29 @@
 ===Noun===
 {{en-noun}}
 
-# [[division]], the act of [[portioning]] and [[sharing]].
-# {{archaic}} {{archaeology}} The one-time standard practice of the [[divvying]] up of [[artifact]]s between archaeologists, their [[patrons]] and the host [[territory]].
+# [[division]], the act of [[portioning]] out and [[sharing]].
+# {{archaic}} {{archaeology}} The one-time standard practice of the [[divvying]] up of [[artifact]]s between [[archaeologists]], their [[patrons]] and the host [[territory]].
 # {{obsolete}} A [[part]], [[portion]] or [[share]].
 
 ===References===
 {{R:Webster 1913}}
 
 ----
+==French==
+
+===Etymology===
+{{suffix|partir|age}}
+
+===Noun===
+{{fr-noun|m}}
+
+# [[sharing]]
+
+[[Category:French nouns]]
+
+[[et:partage]]
+[[fr:partage]]
+[[io:partage]]
+[[id:partage]]
+[[ru:partage]]
+[[vi:partage]]
