--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Greek {{polytonic|[[θεωρία]]}} ("contemplation, speculation, a looking at, things looked at") < {{polytonic|[[θεωρέω]]}} (to look at, view, consider, examine) < {{polytonic|[[θεωρός]]}} (spectator) < {{polytonic|[[θέα]]}} (a view) + {{polytonic|[[ὁράω]]}} (to see, to look).
+English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{polytonic|[[θεωρία]]}} ("contemplation, speculation, a looking at, things looked at") < {{polytonic|[[θεωρέω]]}} (to look at, view, consider, examine) < {{polytonic|[[θεωρός]]}} (spectator) < {{polytonic|[[θέα]]}} (a view) + {{polytonic|[[ὁράω]]}} (to see, to look).
 
 ===Pronunciation===
 *{{audio|en-us-theory.ogg|Audio (US)}}
