/* Proper noun */ rfd-sense tplt <countdown#3406367>

--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -9,9 +9,9 @@
 # {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
 
 ===Proper noun===
-'''countdown'''
+{{en-proper}}
 
-# (''Britain'') A long-running [[television]] [[game show]]
+# {{rfd-sense}} {{UK}} A long-running [[television]] [[game show]]
 
 ====Translations====
 {{trans-top|A count backward to the time of some event}}
