--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -9,7 +9,7 @@
 # {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
 
 ===Proper noun===
-{{en-proper}}
+{{en-proper noun}}
 
 # {{rfd-sense}} {{UK}} A long-running [[television]] [[game show]]
 
