--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -1,8 +1,8 @@
+{{wikipedia}}
 ==English==
 
 ===Noun===
-{{wikipedia}}
-'''countdown'''
+{{en-noun}}
 
 # A [[count]] [[backward]] to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
@@ -41,9 +41,8 @@
 {{mid}}
 {{bottom}}
 
-===Intransitive verb===
-{{rfc-trverb|Intransitive verb}}
-'''to countdown'''
+===Verb===
+{{en-verb}}
 
 # To [[recite]] a countdown
 
