--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -15,7 +15,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 # ''Denotes [[singular]] [[grammatical]] [[number]].''
 
 ====Usage notes====
-* The vast majority of words which feature this suffix also have standard ''-ums'' plurals formed by suffixation with the {{term|-s|lang=en}} plural suffix. However, in such situations, the {{term||-s}} suffix is morphologically additional to and separate from the {{term||-um}} suffix.
+* The vast majority of words which feature this suffix also have standard ''-ums'' plurals formed by suffixation with the {{term|-s|lang=en}} plural suffix. However, in such situations, the {{term||-s}} suffix morphologically is additional to and separate from the {{term||-um}} suffix.
 
 ====See also====
 {{rel-top5|See also}}
