/* Idiom */ <in the reign of Queen Dick#3409487>

--- a/en/i/in the reign of Queen Dick.801800.wikitext
+++ b/en/i/in the reign of Queen Dick.801800.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Idiom===
-{{infl|en|idiom|in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
+{{infl|en|idiom|head=in the [[reign]] of [[queen|Queen]] [[dick|Dick]]}}
 
 # [[when pigs fly]]; [[never]]
