--- a/en/p/positronium.746650.wikitext
+++ b/en/p/positronium.746650.wikitext
@@ -6,6 +6,13 @@
 
 #{{physics}} An [[exotic atom]] consisting of a [[positron]] and an [[electron]], but having no [[nucleus]]
 
+====Translations====
+{{top}}
+*Italian: [[positronio]] {{m}}
+{{mid}}
+
+{{bottom}}
+
 ====Derived terms====
 *[[dipositronium]]
 
