added {{rfv}} <Eye-talian#3413619>

--- a/en/e/Eye-talian.803534.wikitext
+++ b/en/e/Eye-talian.803534.wikitext
@@ -1,3 +1,4 @@
+{{rfv}}
 ==English==
 {{warn|neologism}}
 
@@ -17,3 +18,4 @@
 
 ===Usage notes===
 The spelling represents a pronunciation of ''Italian'' with {{IPA|/aɪ/}} rather than {{IPA|/ɪ/}} or {{IPA|/ə/}}.
+—
