--- a/en/e/Eye-talian.803534.wikitext
+++ b/en/e/Eye-talian.803534.wikitext
@@ -18,4 +18,11 @@
 
 ===Usage notes===
 The spelling represents a pronunciation of ''Italian'' with {{IPA|/aɪ/}} rather than {{IPA|/ɪ/}} or {{IPA|/ə/}}.
+
+
+
+[Category:Eye dialect]]
+
+
+
 —
