/* Usage notes */ typo <Eye-talian#3414503>

--- a/en/e/Eye-talian.803534.wikitext
+++ b/en/e/Eye-talian.803534.wikitext
@@ -21,7 +21,7 @@ The spelling represents a pronunciation of ''Italian'' with {{IPA|/aɪ/}} rather
 
 
 
-[Category:Eye dialect]]
+[Category:Eye dialect]
 
 
 
