--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -25,6 +25,7 @@
 *[[Scottish Gaelic]]: [[amhairc]]
 *Spanish: [[mirar]], [[vigilar]]
 *Portuguese: [[olhar]]
+*Russian: [[смотреть]], [[глядеть]]
 *Serbian: [[posmatrati]], [[gledati]]
 *Macedonian: [[Гледа]], [[Следи]]
 {{bottom}}
