/* Noun */ n tmplt <minimum#3420341>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -5,7 +5,7 @@
 Latin ''[[minim]]'' small + ''[[-um]]''
 
 ===Noun===
-'''minimum''' (plural: '''[[minima]]''' or '''[[minimums]]''')
+{{en-noun|pl=[[minima]]|pl2=[[minimums]])
 
 # [[lowest]] [[limit]]
 
@@ -18,19 +18,19 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 * [[moral minimum]]
 
 ====Translations====
-{{top}}
+{{trans-top|lowest limit}}
 * Chinese: [[最小]] (zui xiao, zui4 xiao3), [[極小值]] (zuixiaozhi, zui4xiao3zhi2)
 * Finnish: [[minimi]]
 * French: [[minimum#French|minimum]]
 * German: [[Minimum]] {{n}}
 * Japanese: [[最小]] (saishou), [[最低]] (saitei), [[極小]] (kyokushou)
-{{mid}}
+{{trans-mid}}
 * Latin: [[minimum#Latin|minimum]]
 * Romanian: [[minimum#Romanian|minimum]]
 * Russian: [[минимум]] (mínimum) {{m}}
 * Swedish: [[minimum#Swedish|minimum]] {{n}}
 * [[Telugu]]: [[కనిష్టం]] (kanishTaM)
-{{bottom}}
+{{trans-bottom}}
 
 [[Category:English nouns with irregular plurals]]
 
