--- a/en/g/gagaku.801689.wikitext
+++ b/en/g/gagaku.801689.wikitext
@@ -1,5 +1,5 @@
 ==Japanese==
-{{wikipedia|Gagaku}}
+{{wikipedia|Gagaku}} (hiragana: [[ががく]])
 ===Noun===
 '''[[雅樂]]'''
 #the ancient court ritual music of Japan, of Chinese and Korean origin
