--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -10,18 +10,20 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 
 ====Translations====
 {{trans-top|language spoken in Friesland}}
-*Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
-*Finnish: [[länsifriisi]], *German: [[Friesisch]] {{n}}
+* Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
+* Finnish: [[länsifriisi]], *German: [[Friesisch]] {{n}}
 [[länsifriisi|länsifriisin]] [[murre]]
 {{trans-mid}}
-*Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
+* Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
+* Polish: {{t|pl|zachodnio-fryzyjski|m}}
 *West Frisian: {{tø|fry|Frysk}}
 {{trans-bottom}}
 
 {{trans-top|the Western Frisian dialect of Dutch}}
-*Dutch: {{t|nl|West-Fries}}
+* Dutch: {{t|nl|West-Fries}}
 {{trans-mid}}
-*Italian: dialetto frisone occidentale (ad hoc)
+* Italian: dialetto frisone occidentale (ad hoc)
+* Polish: {{t|pl|zachodnio-fryzyjski|m}}
 {{trans-bottom}}
 
 {{checktrans}}
@@ -30,7 +32,6 @@ Please distinguish between the Frisian language group, the West Frisian language
 *{{ttbc|Esperanto}}: [[frizona]]
 *{{ttbc|French}}: [[frison]] {{m}}
 *{{ttbc|Icelandic}}: [[frísneska]] {{f}}
-*{{ttbc|Polish}}: (język) [[fryzyjski]] {{m}}
 *{{ttbc|Spanish}}: [[frisón]] {{m}}
 *{{ttbc|Swedish}}: [[frisiska]] {{c}}
 
