not Swedish? <vodka#3437605>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -24,7 +24,7 @@
 *Chinese: [[伏特加酒]] (fú tè jiā jiǔ)
 *Czech: vodka {{f}}
 *Danish: vodka {{c}}
-*Dutch: [[wodka]] {{c}}
+*Dutch: [[wodka]] {{m}}
 *Esperanto: [[vodko]]
 *Estonian: vodka, [[viin]]
 *Finnish: [[votka]]
