--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -94,7 +94,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{seeCites}}
 
 ====Translations====
-{{trans-top|rise up in bubbles}}
+{{trans-top|to rise up in bubbles}}
 *Finnish: [[kuplia]], [[poreilla]]
 *Hungarian: [[buborékol]], [[bugyborékol]]
 {{trans-mid}}
