--- a/en/d/dtn.855030.wikitext
+++ b/en/d/dtn.855030.wikitext
@@ -3,7 +3,7 @@
 <!-- For administrator use only: {{oldafdfull|page=Dtn (printer designation)|date=19 December 2007|result='''keep'''}} -->
 <!-- End of AfD message, feel free to edit beyond this point -->
 
-== dtn (printer designation) ==
+== [[Duplex, Tray, Network]] dtn (printer designation) ==
 
 '''dtn''' is an acronym which stands for '''[[Duplex]], [[Tray]], [[Network]]''' in relation to the selling of [[laser printers]].
 It is used as a designation that a [[printer]] has '''D'''uplex (double sided printing) capability,  paper '''T'''rays and is '''N'''etworkable
