--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -69,6 +69,7 @@
 *Indonesian: [[taruh|mempertaruhkan]]
 *Japanese: [[賭ける]] ([[かける]], kakeru)
 *Latvian: [[derēt]]
+*Polish: {{t|pl|postawić}}, {{t|pl|zakładać się}}
 *Slovak: [[staviť]], [[vsadiť]], [[stávkovať]]
 *Slovene: [[staviti]]
 *Swedish: [[slå vad]]
@@ -79,6 +80,7 @@
 *Dutch: [[er op kunnen rekenen]]
 {{trans-mid}}
 *Latvian: [[būt]] [[pārliecināts|pārliecinātam]]
+*Polish: {{t|pl|stawiać na}}
 *Slovak: [[staviť]] sa
 {{trans-bottom}}
 
