/* Related terms */ <pariente#3444415>

--- a/en/p/pariente.4512.wikitext
+++ b/en/p/pariente.4512.wikitext
@@ -8,17 +8,15 @@ From {{L.|es}} ''[[parens]], parentis''
 
 # [[relative]], [[relation]]
 
-===Related terms===
+====Related terms====
 *[[parir]]
 *[[parentela]]
 *[[parentesco]]
 *[[emparentar]]
 
 ====Usage notes====
-{{rfc-level|Usage notes at L4+ not in L3 POS section (AutoFormat would have corrected level of Related terms)}}
 *'''Pariente''' is a [[false friend]], and does not mean "[[parent]]".  The word for "parent" in Spanish is ''[[padre#Spanish|padre]]'' (or [[madre#Spanish|madre]] for specifically the mother).
 
-[[Category:Spanish nouns]]
 [[Category:es:Family]]
 
 [[es:pariente]]
