--- a/en/d/dtn.855030.wikitext
+++ b/en/d/dtn.855030.wikitext
@@ -2,6 +2,7 @@
 {{AfDM|page=Dtn (printer designation)|date=2007 December 19|substed=yes}}
 <!-- For administrator use only: {{oldafdfull|page=Dtn (printer designation)|date=19 December 2007|result='''keep'''}} -->
 <!-- End of AfD message, feel free to edit beyond this point -->
+{{dict}}
 
 == [[Duplex, Tray, Network]] dtn (printer designation) ==
 
@@ -18,3 +19,6 @@ This acronym is used by various [[printer]] manufacturers when selling printers 
 * http://www.acronymfinder.com/af-query.asp?acronym=DTN
 * http://www.hp.com
 * http://www.lexmark.com
+
+{{computer-stub}}
+{{vocab-stub}}
