--- a/en/d/dtn.855030.wikitext
+++ b/en/d/dtn.855030.wikitext
@@ -20,5 +20,7 @@ This acronym is used by various [[printer]] manufacturers when selling printers 
 * http://www.hp.com
 * http://www.lexmark.com
 
+{{uncat}}
+
 {{computer-stub}}
 {{vocab-stub}}
