--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -4,4 +4,4 @@
 {{wikipedia}}
 {{en-noun|sg=[[terrestrial]] [[planet]]}}
 
-# Any planet of the [[solar system]] or any [[exoplanet]] which is [[Earth]][[-like]] in the sense that it is composed primarily of [[metal]]s and [[rock]], in contrast to a planet which is a [[gas giant]].
+# {{astronomy}} Any planet of the [[solar system]] or any [[exoplanet]] which is [[Earth]][[-like]] in the sense that it is composed primarily of [[metal]]s and [[rock]], in contrast to a planet which is a [[gas giant]].
