--- a/en/g/gramas.855023.wikitext
+++ b/en/g/gramas.855023.wikitext
@@ -2,6 +2,6 @@
 ===Noun===
 '''gramas''' {{p}}
 
-# plural form of [[grama#portuguese|grama]] (unit of mass)
+# plural form of [[grama#Portuguese|grama]] (unit of mass)
 
 [[Category:Portuguese plurals]]
