--- a/en/s/squirt gun.855129.wikitext
+++ b/en/s/squirt gun.855129.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|sg=[[squirt]] [[gun]]}}
 
-# A toy gun used to [[shoot]] water.
+# A [[toy]] gun used to [[shoot]] water.
 #*'''1926''', "[http://www.time.com/time/magazine/article/0,9171,729168-2,00.html Miscellany]," ''Time'', 19 Apr.,
 #*:He possessed a large '''squirt gun''' which he delighted to fill with bilge water in the dead of night.
 
