{{infl}} (en), [[User:Connel MacKenzie/Format|fmt]] <apathist#3445352>

--- a/en/a/apathist.855078.wikitext
+++ b/en/a/apathist.855078.wikitext
@@ -1,6 +1,6 @@
 ==English==
-Apathist
-===Noun===
-{{apathist}}
 
-# {{One who has no feeling towards anything, or more specifically religion. Also having no feeling towards the ideas of a higher power, or praises given to one.}}
+===Noun===
+{{en-noun}}
+
+# {{rfquote}} One who has [[no]] [[feeling]] towards anything, or more specifically religion.
