an actual definition <plastic deformation#3445470>

--- a/en/p/plastic deformation.855160.wikitext
+++ b/en/p/plastic deformation.855160.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[plastic]] [[deformation]]}}
 
-# {{substub}}
+# A [[permanent]] change in the [[shape]] or [[size]] of an object without breaking it or putting it under excessive stress
