--- a/en/g/guilloche.855171.wikitext
+++ b/en/g/guilloche.855171.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 ===Etymology===
-From {{F.}} {{term|#French|guilloche}}.
+From {{F.}} {{term|guilloche#French|guilloche}}.
 
 ===Pronunciation===
 {{IPA|/gɪˈlɒʃ/}}
