Finishing touches. <nudely#3445714>

--- a/en/n/nudely.855206.wikitext
+++ b/en/n/nudely.855206.wikitext
@@ -1,7 +1,8 @@
 ==English==
 ===Adverb===
-{{en-adverb}}
+'''nudely'''
 
 # Acting in a [[nude]] manner.
 
 ===References===
+''Collins Concise Dictionary, Fifth Edition'', HarperCollins Publishers, 2001.
