--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -1,1 +1,7 @@
+==English==
+===Noun===
+
 Environmental science is the integrated and interdisciplinary approach to the study of environmental systems which includes interactions among physical, chemical, and biological components of the environment.
+
+===Related terms===
+* [[environmental scientist]]
