--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -20,6 +20,7 @@
 {{trans-mid}}
 *Russian: [[обратный отсчёт]] (obrátnyj otš'ót) {{m}}
 *Slovene: [[odštevanje]] {{n}}
+*Swedish: [[nedräkning]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|The acts of preparation carried out during this period}}
