wikify, link to -pedia <environmental science#3446236>

--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -1,7 +1,9 @@
 ==English==
 ===Noun===
+{{wikipedia}}
+{{en-noun|sg=[[environmental]] [[science]]}}
 
-Environmental science is the integrated and interdisciplinary approach to the study of environmental systems which includes interactions among physical, chemical, and biological components of the environment.
+# The [[interdisciplinary]] study of factors that influence the [[environment]], especially the [[interaction]] of the [[physical]], [[chemical]], and [[biological]] components of the environment
 
 ===Related terms===
 * [[environmental scientist]]
