wikify headword <environmental scientist#3446242>

--- a/en/e/environmental scientist.855268.wikitext
+++ b/en/e/environmental scientist.855268.wikitext
@@ -1,6 +1,6 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[environmental]] [[scientist]]}}
 
 # A [[scientist]] whose speciality is [[environmental science]].
