typo:n#A [[gold]]-[[copper]] [[alloy]] used in jewelry for it's reddish color. <rose gold#3446554>

--- a/en/r/rose gold.855393.wikitext
+++ b/en/r/rose gold.855393.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{en-noun}}
 
-#A [[gold]]-[[copper]] [[alloy]] used in jewelty for it's reddish color.
+#A [[gold]]-[[copper]] [[alloy]] used in jewelry for it's reddish color.
