--- a/en/r/Russian gold.855392.wikitext
+++ b/en/r/Russian gold.855392.wikitext
@@ -4,4 +4,4 @@
 {{en-noun}}
 {{wikipedia}}
 
-#A name for a [[gold]]-[[copper]] [[alloy]] more commonly called [[rose gold]].  The alloy was popular in Russia at one time but the term is now less common that it was.
+#A name for a [[gold]]-[[copper]] [[alloy]] more commonly called [[rose gold]].  The alloy was popular in Russia at one time but the term is now less common than it was.
