--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,3 +1,5 @@
+{{dicdef}}
+
 '''Grognard''' (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon) may mean:
 
 * [[Napoleon Bonaparte]]'s name for old veteran soldiers; specifically the Grenadiers of the Imperial Guard (Grenadiers à Pied de la Garde Impériale). They were the soldiers who were old enough to know what was going on, but junior enough in rank not to be able to affect it, and constantly complained about it.<ref>[http://www.napoleonguide.com/glossary.htm Napoleonic Glossary]</ref>
