--- a/en/p/prosodic.855423.wikitext
+++ b/en/p/prosodic.855423.wikitext
@@ -1,3 +1,10 @@
 == English ==
+=== Adjective ===
 {{en-adj}}
 # of, or relating to, [[prosody]]
+
+==== Translations ====
+{{trans-top|prosody}}
+{{trans-mid}}
+* Spanish: {{t|es|prosódico|m}}
+{{trans-bottom}}
