--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -4,8 +4,7 @@
 {{wikipedia}}
 {{en-noun}}
 
-# A member of the most radical club founded during the French Revolution,
-which instituted the Reign of Terror.
+# A member of the most radical club founded during the French Revolution, which instituted the Reign of Terror.
 # An extreme political [[radical]].
 # A [[Dominican]] [[friar]] 
 
