--- a/en/2/2 gauge.855460.wikitext
+++ b/en/2/2 gauge.855460.wikitext
@@ -1,7 +1,11 @@
 ==English==
 ===Noun===
+{{wikipedia}}
 {{en-noun|sg=[[2]] [[gauge]]|-}}
 #A [[model]] [[railway]] [[gauge]] of 64 mm, standardised in 1909 but since fallen into disuse. 
 
 ====Alternative spellings====
 *[[II gauge]]
+
+====Related terms====
+*[[1 gauge]]
