--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -20,6 +20,7 @@
 *Danish: {{t|da|fløjte}}, {{t|da|hvisle}}
 *Dutch: {{t|nl|fluiten}}
 {{trans-mid}}
+*Russian: {{t|tu|свистеть|tr=svist'ét’}} {{impf}}, {{t|tu|свистнуть|tr=svístnut’}} {{pf}}
 *Swedish: {{t|sv|vissla|c}}
 {{trans-bottom}}
 
@@ -28,6 +29,7 @@
 *Danish: {{t|da|hvisle}}
 *Dutch: {{t|nl|fluiten}}
 {{trans-mid}}
+*Russian: {{t|tu|свистеть|tr=svist'ét’}} {{impf}}, {{t|tu|просвистеть|tr=prosvist'ét’}} {{pf}}
 *Swedish: {{t|sv|vissla|c}}
 {{trans-bottom}}
 
@@ -42,7 +44,6 @@
 {{checktrans-mid}}
 *{{ttbc|Polish}}: [[gwizdać]], [[świstać]]
 *{{ttbc|Portuguese}}: [[apitar]], [[assobiar]]
-*{{ttbc|Russian}}: [[свистеть]] (svistét’)
 *{{ttbc|Spanish}}: [[chiflar]], [[silbar]]
 *{{ttbc|Telugu}}: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
 {{checktrans-bottom}}
@@ -66,6 +67,7 @@
 {{trans-mid}}
 *Polish: [[gwizdek]] {{m}}
 *Portuguese: [[apito]] {{m}}
+*Russian: {{t|ru|свисток|m|tr=svistók}}
 *Swedish: [[vissla]] {{c}}, [[pipa]] {{c}}, [[visselpipa]] {{c}}
 {{trans-bottom}}
 
@@ -79,6 +81,7 @@
 {{trans-mid}}
 *Polish: [[gwizd]] {{m}}
 *Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
+*Russian: {{t|ru|свист|m|tr=svist}}
 *Swedish: [[vissling]] {{c}}
 {{trans-bottom}}
 
@@ -91,29 +94,28 @@
 {{trans-mid}}
 *Polish: [[gwizd]] {{m}}
 *Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
+*Russian: {{t|ru|свист|m|tr=svist}}
 {{trans-bottom}}
 
 {{trans-top|slang: a suit}}
 *''See translations for article '''[[suit]]'''''
 {{trans-bottom}}
-
-{{trans-top|Translations to be categorised}}
 {{rfc-trans}}
-*Arabic: {{ARchar|[[صفارة]]}} {{unicode|(ʂufára)}} {{f}}
-*[[Catalan]]: [[xiulet]] {{m}}
-*Chinese: [[口哨]] (kǒushào)
-*French: [[sifflet]] {{m}}
-*German: [[Pfeife]] {{f}}
-*Indonesian: [[peluit]]
-*Irish: [[feadog]]
-*Italian: [[fischietto]], [[fischio]]
-*Japanese: [[笛]] ([[ふえ]], fue), [[口笛]] (くちぶえ, kuchibue)
-*Korean: [[호르라기]] (horeuragi)
+{{trans-top|Translations to be categorised}}
+*{{ttbc|Arabic}}: {{ARchar|[[صفارة]]}} {{unicode|(ʂufára)}} {{f}}
+*{{ttbc|Catalan}}: [[xiulet]] {{m}}
+*{{ttbc|Chinese}}: [[口哨]] (kǒushào)
+*{{ttbc|French}}: [[sifflet]] {{m}}
+*{{ttbc|German}}: [[Pfeife]] {{f}}
+*{{ttbc|Indonesian}}: [[peluit]]
+*{{ttbc|Irish}}: [[feadog]]
+*{{ttbc|Italian}}: [[fischietto]], [[fischio]]
+*{{ttbc|Japanese}}: [[笛]] ([[ふえ]], fue), [[口笛]] (くちぶえ, kuchibue)
+*{{ttbc|Korean}}: [[호르라기]] (horeuragi)
 {{trans-mid}}
-*Russian: [[свисток]] (svistók) {{m}}
-*Spanish: [[silbato]] {{m}}
-*Swahili: [[kipenga]]
-*[[Telugu]]: [[ఈల]] (eela), [[బూర]] (boora)
+*{{ttbc|Spanish}}: [[silbato]] {{m}}
+*{{ttbc|Swahili}}: [[kipenga]]
+*{{ttbc|Telugu}}: [[ఈల]] (eela), [[బూర]] (boora)
 {{trans-bottom}}
 
 [[Category:1000 English basic words]]
