--- a/en/c/chimest.855956.wikitext
+++ b/en/c/chimest.855956.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
 ===Etymology===
-[[chime]] + [[-eth]]
+[[chime]] + [[-est]]
 
 ===Verb===
 {{infl|en|verb form}}
 
-# {{archaic}} {{third-person singular of|chime}}
+# {{archaic}} Second-person singular present simple form of '''[[chime]]'''
