--- a/en/g/garden shears.856094.wikitext
+++ b/en/g/garden shears.856094.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''garden shears'''
+'''[[garden]] [[shears]]'''
 #{{plurale tantum}} A [[tool]] consisting of two [[blade]]s with [[bevel]] edges, connected by a [[pivot]], used for [[gardening]]
 
 ====Translations====
