--- a/en/b/biramous.856053.wikitext
+++ b/en/b/biramous.856053.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
+===Etymology===
+[[bi-]] + [[-ramous]]
+
 ===Adjective===
 {{en-adj|-}}
 
-# {{context|zoology|of an arthropod's leg}} Branching in two, composed of two [[branch]]es.
-
-====See also====
-*[[uniramous]]
+# Branching in two, composed of two [[branch]]es.
