--- a/en/b/blankie.856215.wikitext
+++ b/en/b/blankie.856215.wikitext
@@ -3,4 +3,6 @@
 ===Noun===
 {{en-noun}}
 
-#{{informal}} A [[blanket]], especially one used as a [[security blanket]]
+#{{informal}} A [[blanket]], especially one used as a [[security blanket]].
+#*'''2002''', Belinda Luscombe, "[http://www.time.com/time/arts/article/0,8599,203627,00.html Dress to De-Stress]," ''Time'', 18 Feb.,
+#*:They instead sought out a place of refuge, somewhere familiar with a '''blankie''' and a mug of hot cocoa.
