--- a/en/s/sausage meat.776070.wikitext
+++ b/en/s/sausage meat.776070.wikitext
@@ -3,4 +3,5 @@
 ===Noun===
 {{en-noun}}
 
-#Ground, spiced, meat that can be stuffed in a [[sausage]] or used as a sausage [[patty]].
+# Ground, spiced, meat that can be stuffed in a [[sausage]] or used as a sausage [[patty]].
+[[Category:Sausages]]
