see rel trms <count-down#3450246>

--- a/en/c/count-down.856258.wikitext
+++ b/en/c/count-down.856258.wikitext
@@ -1,6 +1,10 @@
+{{see|countdown}}
 ==English==
 
 ===Noun===
 {{en-noun}}
 
 # {{alternative spelling of|[[countdown]]}}
+
+====Related terms====
+*[[countdown]]
