--- a/en/g/graniteware.856309.wikitext
+++ b/en/g/graniteware.856309.wikitext
@@ -2,5 +2,5 @@
 
 ===Noun===
 {{en-noun}}
-# A kind of [[ironware]] that has been coated with a layer of [[vitreous]] [[enamel]] with a swirled or speckled pattern resembling [[granite]].
-# A kind of [[pottery]] with the same type of enamel coating.
+# [[ironware|Ironware]] that has been coated with a layer of [[vitreous]] [[enamel]] with a swirled or speckled pattern resembling [[granite]].
+# [[pottery|Pottery]] with the same type of enamel coating.
