/* Verb */ subst infl for vb tmplt <catch it#3451065>

--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Verb===
-{{en-verb|catches it|catch it|caught it}}
+{{infl|en|verb|head=to [[catch]] [[it]]}}
 # {{idiom}} be severely reprimanded, punished, or beaten
 #* '''1860''', George Eliot , ''The Mill on the Floss''
 #*: "You'll '''catch it''', you know," said Tom, nodding his head in an admonitory manner, and hesitating a little as he took the scissors.
