--- a/en/p/Pax Augusta.855980.wikitext
+++ b/en/p/Pax Augusta.855980.wikitext
@@ -1,6 +1,4 @@
 ==English==
-===Noun===
-'''Pax Augusta'''
+===Proper noun===
+{{en-proper noun|sg=[[Pax]] [[Augusta]]}}
 # The [[Pax Romana]]
-
-{{en-noun-lacks-inflect}}
