--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -3,7 +3,7 @@
 ===Etymology===
 From Latin.  Coined by [[w:Edward Gibbon|Edward Gibbon]].
 
-===Noun===
+===Proper noun===
 {{en-proper noun|sg=[[Pax]] [[Romana]]}}
 # The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 BC and 180 AD.
 
