--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -3,6 +3,6 @@
 ===Etymology===
 Latin.  By analogy with [[Pax Romana]].
 
-===Noun===
+===Proper noun===
 {{en-proper noun|sg=[[Pax]] [[Americana]]}}
 # The period of relative peace in the Western world since the end of World War II in 1945, coinciding with the military and economic dominance of the United States.
