--- a/en/p/Pax Britannica.855985.wikitext
+++ b/en/p/Pax Britannica.855985.wikitext
@@ -1,7 +1,5 @@
 ==English==
 {{wikipedia}}
-===Noun===
-'''Pax Brittanica'''
-# The period of British imperialism after the 1805 Battle of Trafalgar, which led to a period of overseas British expansionism.
-
-{{en-noun-lacks-inflect}}
+===Proper noun===
+{{en-proper noun|sg=[[Pax]] [[Brittanica]]}}
+# The period of British [[imperialism]] after the 1805 Battle of [[Trafalgar]], which led to a period of overseas British [[expansionism]].
