/* English */ cleaned trans tables <gamble#3452325>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -3,9 +3,7 @@
 
 ===Pronunciation===
 *Rhymes: [[Rhymes:English:-æmbəl|-æmbəl]]
-
-====Homophones====
-*[[gambol]]
+*Homophones: [[gambol]]
 
 ===Noun===
 {{wikipedia}}
@@ -16,14 +14,22 @@
 #: The sailors had taken many '''gambles''' ''(plural)'' with the sea and always won.
 
 ====Translations====
-{{trans-top}}
-*Dutch: [[gok]] {{m}}
-*German: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
+{{trans-top|a risk undertaken with a potential gain}}
 {{trans-mid}}
-*Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
-*[[Interlingua]]: [[joco]]
-*Portuguese: [[jogo]] {{m}}
 {{trans-bottom}}
+
+{{trans-top|a risky venture}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+*{{ttbc|Dutch}}: [[gok]] {{m}}
+*{{ttbc|German}}: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
+{{checktrans-mid}}
+*{{ttbc|Japanese}}: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
+*{{ttbc|Interlingua}}: [[joco]]
+*{{ttbc|Portuguese}}: [[jogo]] {{m}}
+{{checktrans-bottom}}
 
 ===Verb===
 {{en-verb|gambl|ing}}
@@ -34,21 +40,30 @@
 #:''He '''gambled''' his reputation on the outcome.''
 
 ====Translations====
-<!--intransitive? both?  TTBC, right?  In English, the 1st and 3rd are not distinct senses. -->
-{{trans-top}}
-*Dutch: [[gokken]]
-*German: [[riskant]] [[spielen]]
+{{trans-top|to take a risk, with the potential of a positive outcome}}
 {{trans-mid}}
-*[[Interlingua]]: [[jocar]]
-*Portuguese: [[jogar]]
 {{trans-bottom}}
 
-{{trans-top|transitive - risk something for potential gain}}
+{{trans-top|to play casino games}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|''(transitive)'' to risk something for potential gain}}
 *German: aufs [[Spiel]] [[setzen]]
 *[[Interlingua]]: [[poner]] in [[risco]]
 {{trans-mid}}
 *Portuguese: [[arriscar]]
 {{trans-bottom}}
+
+<!--intransitive? both? In English, the 1st and 3rd are not distinct senses. -->
+{{checktrans-top}}
+*{{ttbc|Dutch}}: [[gokken]]
+*{{ttbc|German}}: [[riskant]] [[spielen]]
+{{checktrans-mid}}
+*{{ttbc|Interlingua}}: [[jocar]]
+*{{ttbc|Portuguese}}: [[jogar]]
+{{checktrans-bottom}}
+
 
 [[zh-min-nan:gamble]]
 [[fa:gamble]]
