Latin has vestiges of a locative case in names of towns and some other words <at#3452336>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -34,7 +34,7 @@
 
 ====Translations====
 {{trans-top|in or very near a particular place}}
-*Arabic: {{ARchar|[[عند]]}} ({{unicode|[[ʕand]]}})
+*Arabic: {{Arab|[[عند]]}} ({{unicode|[[ʕand]]}})
 *[[Breton]]: [[e#Breton|e]]
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
 *[[Catalan]]: [[a]]
@@ -56,7 +56,7 @@
 *Japanese: [[で]] (de), [[に]] (ni)
 *Korean: [[~에서]] (~eseo)
 *Kurdish: Kurdish: [[li]] ([[Kurmanji]]), [[le]] ([[Soranî]])
-*Latvian: ''[[locative]] case''
+*Latin: ''[[locative case]]''
 {{trans-mid}}
 *[[Novial]]: [[che]], [[an]], [[sur]]
 *Norwegian: [[på]]
