--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -72,6 +72,7 @@
 *Polish: [[gwizdek]] {{m}}
 *Portuguese: [[apito]] {{m}}
 *Russian: {{t|ru|свисток|m|tr=svistók}}
+*Serbian: [[pištaljka]] {{f}}, [[zviždaljka]] {{f}}
 *Swedish: [[vissla]] {{c}}, [[pipa]] {{c}}, [[visselpipa]] {{c}}
 {{trans-bottom}}
 
