--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 {{en-noun|sg=[[environmental]] [[science]]}}
 
-# The [[interdisciplinary]] study of factors that influence the [[environment]], especially the [[interaction]] of the [[physical]], [[chemical]], and [[biological]] components of the environment
+# The integrated study of factors that influence the [[environment]]and environmental systems, especially the [[interaction]] of the [[physical]], [[chemical]], and [[biological]] components of the environment
 
 ===Related terms===
 * [[environmental scientist]]
