/* Translations */ checked Japanese translation <gamble#3458357>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -16,17 +16,18 @@
 ====Translations====
 {{trans-top|a risk undertaken with a potential gain}}
 {{trans-mid}}
+*Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
 {{trans-bottom}}
 
 {{trans-top|a risky venture}}
 {{trans-mid}}
+*Japanese: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
 {{trans-bottom}}
 
 {{checktrans-top}}
 *{{ttbc|Dutch}}: [[gok]] {{m}}
 *{{ttbc|German}}: [[Glücksspiel]] {{n}}, [[Spiel]] {{n}}
 {{checktrans-mid}}
-*{{ttbc|Japanese}}: [[賭け]] ([[かけ]], kake), [[ギャンブル]] (gyanburu)
 *{{ttbc|Interlingua}}: [[joco]]
 *{{ttbc|Portuguese}}: [[jogo]] {{m}}
 {{checktrans-bottom}}
