--- a/en/c/Clintonize.855703.wikitext
+++ b/en/c/Clintonize.855703.wikitext
@@ -1,5 +1,8 @@
 ==English==
+
 ===Verb===
-#(derogatory) To bring about [[Clintonism]].
+{{infl|en|verb}}[[Category:English verbs that lack inflection template]]
+
+# (derogatory) To bring about [[Clintonism]].
 
 [[Category:English verbs]]
