infl tmplt <Clintonize#3463882>

--- a/en/c/Clintonize.855703.wikitext
+++ b/en/c/Clintonize.855703.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Verb===
-{{infl|en|verb}}[[Category:English verbs that lack inflection template]]
+{{infl|en|verb|head=Clintonize}}
 
-# (derogatory) To bring about [[Clintonism]].
+# {{pejorative}} To bring about [[Clintonism]].
 
 [[Category:English verbs]]
