/* Noun */ finetuning <sakkos#3472001>

--- a/en/s/sakkos.741476.wikitext
+++ b/en/s/sakkos.741476.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 '''sakkos'''
 
-# A vestment worn by Orthodox and Eastern Catholic bishops instead of the priest's [[phelonion]] ([[chasuble]]).
+# A richly decorated vestment worn by Orthodox bishops, instead of a priest's [[phelonion]] ([[chasuble]] in western church).
 
 ====Translations====
 {{top}}
