--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -22,6 +22,7 @@ From Malay [[bambu]], [[mambu]]
 <!--DefA-->'''plant'''
 {{top}}
 *Albanian:[[bambu]] 
+*Chinese traditional/simplified: [[竹材]],[[竹材]] (zhú cái)
 *Dutch: [[bamboe]] {{n}}
 *Finnish: [[bambu]]
 *French: [[bambou]] {{m}}
@@ -48,6 +49,7 @@ From Malay [[bambu]], [[mambu]]
 <!--DefB-->'''wood'''
 {{top}}
 *Albanian: [[bambu]]
+*Chinese traditional/simplified: [[竹子]],[[竹子]] (zhú zi)
 *Dutch: [[bamboe]] {{n}}
 *Finnish: [[bambu]]
 *German: [[Bambus]] {{m}}, [[Bambusrohr]] {{n}}
@@ -70,7 +72,6 @@ From Malay [[bambu]], [[mambu]]
 The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  It is not currently clear to which sense(s) these translations apply.
 
 *{{ttbc|CJK Characters}}: [[篳]], [[筚]]
-*{{ttbc|Chinese}}: [[竹子]]
 *{{ttbc|Isthmus Zapotec}}: [[bixiá]]
 *{{ttbc|Korean}}: [[대나무]]
 
@@ -82,6 +83,7 @@ The translations below need to be checked by native speakers and inserted into t
 ====Translations====
 <!--DefC-->'''made of bamboo'''
 {{top}}
+*Chinese traditional/simplified: [[竹製]]的, [[竹製]]的 (zhú zhì de)
 *Dutch: bamboe-
 *Esperanto: [[bambua]]
 *French: de bambou
