--- a/en/d/dropt.856327.wikitext
+++ b/en/d/dropt.856327.wikitext
@@ -3,9 +3,9 @@
 ===Verb===
 '''dropt'''
 
-# {{alternative spelling of|[[dropped]]}}
+# {{obsolete spelling of|[[dropped]]}}
 
 ===Adjective===
 '''dropt'''
 
-# {{alternative spelling of|[[dropped]]}}
+# {{obsolete spelling of|[[dropped]]}}
