--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -14,4 +14,5 @@
 {{trans-top|book of the Bible}}
 *Greek: {{t|el|Α' Σαμουήλ||tr=A' Samouíl|sc=Grek}}
 {{trans-mid}}
+*Japanese: [[サムエル記上]] (samueru kijō)
 {{trans-bottom}}
