--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -14,4 +14,5 @@
 {{trans-top|book of the Bible}}
 *Greek: {{t|el|Α' Βασιλειών||tr=A' Vasileión|sc=Grek}}, {{t|el|Βασιλείς Α'||tr=Vasileís A'|sc=Grek}}
 {{trans-mid}}
+*Japanese: [[列王記上]] (retsuō kijō)
 {{trans-bottom}}
