--- a/en/2/2 Kings.801706.wikitext
+++ b/en/2/2 Kings.801706.wikitext
@@ -14,4 +14,5 @@
 {{trans-top|book of the Bible}}
 *Greek: {{t|el|Β' Βασιλειών||tr=B' Vasileión|sc=Grek}}, {{t|el|Βασιλείς Β'||tr=Vasileís B'|sc=Grek}}
 {{trans-mid}}
+*Japanese: [[列王記下]] (retsuō kige)
 {{trans-bottom}}
