--- a/en/j/Joselyn.741080.wikitext
+++ b/en/j/Joselyn.741080.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Proper noun===
-'''Joselyn'''
+{{en-proper noun}}
 
-# {{alternative spelling of|Jocelyn}}
+# {{given name|female}}, a modern spelling variant of [[Jocelyn]].
 
 [[sr:Joselyn]]
