--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -114,9 +114,12 @@ From French ''simple'', from Latin ''[[simplex]]''
 {{IPA|[ˈsim.ple]|lang=ro}}
 
 ===Adjective===
-{{ro-adjform|fpl|simplu}}
+'''simple'''
 
-# [[#English|simple]]
+# {{ro-form-adj|fp|n|simplu}}
+# {{ro-form-adj|fp|a|simplu}}
+# {{ro-form-adj|np|n|simplu}}
+# {{ro-form-adj|np|a|simplu}}
 
 ----
 
