--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -35,6 +35,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *Finnish: [[jakaminen]], [[jako]]
 *French: division {{f}}
 *German: [[Teilung]] {{f}}
+*Hebrew: [[חלוקה]] (khaluqa) {{f}}
 *Italian: [[divisione]] {{f}}
 {{trans-mid}}
 *Kurdish: {{KUchar|[[دابه‌ش]]}}
@@ -66,6 +67,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *Finnish: [[jako]], [[jakaminen]]
 *French: division {{f}}
 *German: [[Division]] {{f}}
+*Hebrew: [[חילוק]] (khiluq) {{m}}
 *Italian: [[divisione]] {{f}}
 {{trans-mid}}
 *Kurdish: {{KUchar|[[دابه‌ش]]}}
@@ -97,6 +99,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 *Esperanto: [[divizio]]
 *Finnish: [[divisioona]]
 *German: [[Abteilung]] {{f}}, [[Division]] {{f}}
+*Hebrew: [[אוגדה]] (ugda) {{f}}
 {{trans-mid}}
 *Kurdish: {{KUchar|[[فرقه‌]]}}
 *Polish: [[dywizja]] {{f}}
