/* Derived terms */ *[[eat like a pig]] <pig#3485910>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -183,10 +183,11 @@
 {{trans-bottom}}
 
 ====Derived terms====
-{{top3}}
+{{trans-top}}
 *[[blind pig]]
 *[[bush pig]]
 *[[dish pig]]
+*[[eat like a pig]]
 *[[flying pig]]
 *[[guinea pig]]
 *[[if pigs had wings]]
@@ -194,10 +195,10 @@
 *[[pig bed]]
 *[[piggery]]
 *[[piggish]]
+{{mid3}}
 *[[piggy]]
 *[[piggy bank]]
 *[[piggyback]]
-{{mid3}}
 *[[pigheaded]]
 *[[pig in a blanket]]
 *[[pig in a poke]]
@@ -206,9 +207,9 @@
 *[[pig Latin]]
 *[[pig lead]]
 *[[piglet]]
+{{mid3}}
 *[[pig-out]]
 *[[pig out]]
-{{mid3}}
 *[[pigpen]]
 *[[pigskin]]
 *[[pigsty]]
