/* Translations */ +ja <whistle#3487215>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -69,6 +69,7 @@
 *Finnish: {{t|fi|pilli}}
 *Hungarian: {{t|hu|síp}}
 {{trans-mid}}
+*Japanese: [[笛]] ([[ふえ]], fue)
 *Polish: {{t|pl|gwizdek|m}}
 *Portuguese: {{t|pt|apito|m}}
 *Russian: {{t|ru|свисток|m|tr=svistók}}
@@ -84,6 +85,7 @@
 *Finnish: [[vihellys]], [[vislaus]]
 *Hungarian: [[füttyszó]]
 {{trans-mid}}
+*Japanese: [[口笛]] (くちぶえ, kuchibue)
 *Polish: [[gwizd]] {{m}}
 *Portuguese: [[apito]] {{m}}, [[assobio]] {{m}}
 *Russian: {{t|ru|свист|m|tr=svist}}
@@ -117,7 +119,6 @@
 *{{ttbc|Irish}}: [[feadog]]
 {{checktrans-mid}}
 *{{ttbc|Italian}}: [[fischietto]], [[fischio]]
-*{{ttbc|Japanese}}: [[笛]] ([[ふえ]], fue), [[口笛]] (くちぶえ, kuchibue)
 *{{ttbc|Korean}}: [[호르라기]] (horeuragi)
 *{{ttbc|Spanish}}: [[silbato]] {{m}}
 *{{ttbc|Swahili}}: [[kipenga]]
