--- a/en/k/kaen.855484.wikitext
+++ b/en/k/kaen.855484.wikitext
@@ -1,4 +1,7 @@
 ==Japanese==
-===Romaji===
-{{romaji|かえん}}
-#{{ja-def|火炎}} [[flame]], [[blaze]]
+
+===Noun===
+{{ja-noun|r|hira=かえん}}
+
+# {{ja-def|火炎|火焔}} [[flame]], [[blaze]]
+# {{ja-def|花園}} [[flower]] [[garden]]
