--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -10,6 +10,8 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 
 ====Translations====
 {{trans-top|language spoken in Friesland}}
+* Chinese:
+*:Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
 * Finnish: [[länsifriisi]], *German: [[Friesisch]] {{n}}
 [[länsifriisi|länsifriisin]] [[murre]]
@@ -28,7 +30,6 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 
 {{checktrans}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
-*{{ttbc|Chinese}}: [[弗里西亚语]] (fúlǐxīyà yǔ)
 *{{ttbc|Esperanto}}: [[frizona]]
 *{{ttbc|French}}: [[frison]] {{m}}
 *{{ttbc|Icelandic}}: [[frísneska]] {{f}}
