--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -86,7 +86,7 @@
 * Swedish: [[mård]]
 * Turkish: [[zerdeva]], [[sansar]]
 * Ukrainian: {{t|uk|куниця|tr=kunytsja|f}}
-* [[Upper Sorbian]]: {{t|dsb|kuna|f}}
+* [[Upper Sorbian]]: {{t|hsb|kuna|f}}
 * Welsh: [[bele]]
 {{trans-bottom}}
 
