iwiki +it, pt <Pax Romana#3499246>

--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -9,3 +9,6 @@ From Latin.  Coined by [[w:Edward Gibbon|Edward Gibbon]].
 
 ====Synonyms====
 *[[Pax Augusta]]
+
+[[it:Pax Romana]]
+[[pt:Pax Romana]]
