--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -45,7 +45,7 @@
 *Serbian: [[карфиол]] (karfiol) {{m}}
 *Slovak: [[karfiol]] {{m}}
 *Slovene: [[cvetača]] {{f}}
-*Spanish: [[coliflor]] {{f}}
+*Spanish: [[coliflor]] {{f}}, [[pella]] {{italbrac|Northern Spain|specifically Navarra|Aragon|La Rioja and the Spanish Basque Country}}
 *Swedish: [[blomkål]]
 *Thai: {{THchar|[[ดอกกะหล่ำ]]}} (dòk gà-làm)
 *Turkish: [[karnabahar]]
