iwiki +ru <Zacharias#3500924>

--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -39,3 +39,5 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 
 # {{biblical character|lang=de}} [[#English|Zacharias]]
 # {{given name|male||de:}}.
+
+[[ru:Zacharias]]
