iwiki +de, fi <abaco#3501077>

--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -28,11 +28,13 @@ From {{L.|it}} '''[[abacus#Latin|abacus]]''' "[[counting board]]" < {{AGr.|it}} 
 
 [[category:Latin noun forms]]
 
+[[de:abaco]]
 [[hy:abaco]]
 [[io:abaco]]
 [[it:abaco]]
 [[pl:abaco]]
 [[ru:abaco]]
 [[sl:abaco]]
+[[fi:abaco]]
 [[sv:abaco]]
 [[zh:abaco]]
