--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -95,5 +95,6 @@
 [[sv:advertisement]]
 [[ta:advertisement]]
 [[vi:advertisement]]
+[[tr:advertisement]]
 [[uk:advertisement]]
 [[zh:advertisement]]
