iwiki +vi <aeronautically#3502230>

--- a/en/a/aeronautically.856000.wikitext
+++ b/en/a/aeronautically.856000.wikitext
@@ -5,3 +5,5 @@
 
 # In a [[aeronautically]] manner; with respect to [[aeronautics]] or [[aviation]].
 #: ''With no paved runways, the country was '''aeronautically''' deficient.''
+
+[[vi:aeronautically]]
