-rfd <seafloor spreading#3502547>

--- a/en/s/seafloor spreading.741098.wikitext
+++ b/en/s/seafloor spreading.741098.wikitext
@@ -1,8 +1,9 @@
-{{rfd}}
 ==English==
 
 ===Noun===
-{{wikipedia}}
 {{en-noun|sg=[[seafloor]] [[spreading]]|-}}
 
-#{{geology}} The outward movement of the seafloor from central underwater ridges as a result of [[plate tectonics]]; the major cause of [[continental drift]]
+# {{geology}} The outward movement of the seafloor from central underwater ridges as a result of [[plate tectonics]]; the major cause of [[continental drift]]
+
+====External links====
+* {{pedialite}}
