--- a/en/s/seafloor spreading.741098.wikitext
+++ b/en/s/seafloor spreading.741098.wikitext
@@ -4,6 +4,7 @@
 {{en-noun|sg=[[seafloor]] [[spreading]]|-}}
 
 # {{geology}} The outward movement of the seafloor from central underwater ridges as a result of [[plate tectonics]]; the major cause of [[continental drift]].
-
+====Translations====
+*German: [[Ozeanbodenspreizung]] {{f}}
 ====External links====
 * {{pedialite}}
