--- a/en/c/cranidium.856074.wikitext
+++ b/en/c/cranidium.856074.wikitext
@@ -4,3 +4,5 @@
 {{en-noun}}
 
 # {{anatomy}} In [[trilobite]]s, the part of the [[cephalon]] (the head) consisting of the [[glabella]] and the [[fixigena]]e.
+
+[[zh:cranidium]]
