--- a/en/d/deformable.855595.wikitext
+++ b/en/d/deformable.855595.wikitext
@@ -5,3 +5,7 @@
 
 # Capable of being [[reshape]]d.
 #:''The adaptive optical systems in modern astronomical telescopes compensate for atmospheric distortion by using '''deformable''' mirrors.''
+
+[[gl:deformable]]
+[[vi:deformable]]
+[[zh:deformable]]
