iwiki +ast, ku, oc <island#3515809>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -136,6 +136,7 @@
 [[Category:1000 English basic words]]
 
 [[ar:island]]
+[[ast:island]]
 [[zh-min-nan:island]]
 [[de:island]]
 [[et:island]]
@@ -147,10 +148,12 @@
 [[id:island]]
 [[it:island]]
 [[kk:island]]
+[[ku:island]]
 [[la:island]]
 [[lt:island]]
 [[hu:island]]
 [[ja:island]]
+[[oc:island]]
 [[pl:island]]
 [[pt:island]]
 [[ru:island]]
