--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -51,7 +51,8 @@ Latin [[ructus]]
 ==Dutch==
 
 ===Adjective===
-'''rot''' ([[rotter]], [[rotst]])
+{{nl-adjcomp|rot|rotte|rotter|rottere|rotst|rotste}}
+'''rot'''
 
 # [[rotten]], [[spoiled]], [[decayed]], [[putrid]]
 # [[rotten]], [[tedious]], [[unkind]], [[mean]]
