--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -104,14 +104,13 @@ The translations below need to be checked by native speakers and inserted into t
 ==Gooniyandi==
 
 ===Etymology===
-English ''[[bamboo#English|bamboo]]''.
+{{E.|gni}} ''[[bamboo#English|bamboo]]''.
 
 ===Noun===
 '''bamboo'''
 
 # [[didgeridoo]]
 
-[[Category:English derivations]]
 [[Category:Gooniyandi nouns]]
 [[Category:gni:Musical instruments]]
 
