[[User:Keene/IPA|IPA links]] <betted#3521047>

--- a/en/b/betted.6796.wikitext
+++ b/en/b/betted.6796.wikitext
@@ -7,7 +7,7 @@
 
 ===Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bεtət/
+*{{IPA|/'bεtət/}}
 
 ===Translations===
 *Dutch: [[gokte]]
@@ -19,7 +19,7 @@
 
 ===Pronunciation===
 *[[w:SAMPA|SAMPA]]: /'/
-*[[w:IPA|IPA]]: /'bεtət/
+*{{IPA|/'bεtət/}}
 
 ===Translations===
 *Dutch: [[gegokt]]
