--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -5,3 +5,4 @@
 {{en-noun|sg=[[bunny]] [[hop]]}}
 
 # {{context|mainly|US|idiom}} A [[dance]] from the [[big band]] era, a variation of the [[conga]].
+# {{context|cycling}} A jump made where both wheels leave the ground.
