iwiki +de <pig#3524477>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -266,6 +266,7 @@ From English ''[[pig#English|pig]]''.
 [[ang:pig]]
 [[ar:pig]]
 [[zh-min-nan:pig]]
+[[de:pig]]
 [[el:pig]]
 [[es:pig]]
 [[fa:pig]]
