--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -117,6 +117,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 [[nl:qua]]
 [[pt:qua]]
 [[ru:qua]]
+[[simple:qua]]
 [[vi:qua]]
 [[tr:qua]]
 [[zh:qua]]
