--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -24,5 +24,5 @@ Former trademark of General Electric Company.
 * [[electrical cable]]
 * [[power cable]]
 
-[[Category:Abbreviations, acronyms, and initialisms]]
+[[Category:Abbreviations, acronyms and initialisms]]
 [[Category:Military]]
