+{{rfc-level|Noun at L4+ not in L3 Ety section}} <BX#3526894>

--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -1,5 +1,4 @@
 {{see|Bx}}
-
 ==English==
 
 ===Pronunciation===
@@ -7,13 +6,15 @@
 
 ===Initialism===
 '''B.X.''' or '''BX'''
+
 # '''Base Exchange''' of the U.S. [[Air Force]].
-#:''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
+#: ''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
 
 ===Etymology===
 Former trademark of General Electric Company.
 
 ====Noun====
+{{rfc-level|Noun at L4+ not in L3 Ety section}}
 '''BX'''
 # A [[flexible]], metal-[[armored]] [[electrical]] [[cable]].
 
