--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -15,7 +15,7 @@
 *'''Hyphenation:''' mar·mot
 
 ===Noun===
-'''marmot''' (''plural:'' [[marmots]])
+{{en-noun}}
 
 # any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and ''[[Cynomys]]'' in the [[squirrel]] family.
 
