fixes <least weasel#3533391>

--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /'list wizəl/
+*{{IPA|/'liːstˈwizəl/
 
 ===Noun===
 {{wikipedia}}
@@ -10,7 +10,7 @@
 # ''Mustela nivalis'', the smallest member of the [[weasel]] [[genus]] ''(Mustela)''.
 
 ====Translations====
-{{top}}
+{{trans-top|Weasel}}
 *Albanian: [[nuse e lalës]]
 *[[Basque]]: [[erbinude]]
 *Belarusian: [[ласка]]
@@ -35,7 +35,7 @@
 *Irish: [[bláthnaid ghallda]]
 *Italian: [[donnola]] {{f}}
 *Korean: [[무산쇠족제비]] (musansoejokjebi)
-{{mid}}
+{{trans-mid}}
 *[[Ladin]]: [[belora]]
 *Latin: [[Mustela nivalis]] '' ''
 *Latvian: [[zebiekste]]
@@ -63,6 +63,6 @@
 *Ukrainian: [[ласиця]] ([[lasicja]])
 *[[Upper Sorbian]]: [[kohlica]]
 *Welsh: [[bronwen]], [[gwenci]]
-{{bottom}}
+{{trans-bottom}}
 
 [[ru:least weasel]]
