--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /'əɽmaɪn/
+*{{IPA|/'əɽmaɪn/}}
 *Rhymes: [[Rhymes:English:-ɜː(r)mɪn|-ɜː(r)mɪn]]
 
 ===Noun===
