[[User:Keene/IPA|IPA links]] <polecat#3533400>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Pronunciation ===
-*[[w:IPA|IPA]]: /'pɔlkæt/
+*{{IPA|/'pɔlkæt/}}
 ===Etymology===
 Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 ===Noun===
