--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /'mʊflɔn/
+*{{IPA|/'mʊflɔn/}}
 
 ===Noun===
 {{wikipedia}}
@@ -9,9 +9,8 @@
 
 # a [[species]] of wild [[sheep]]
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
-{{top}}
+====Translations====
+{{trans-top|sheep}}
 *Albanian: [[mufloni]]
 *[[Basque]]: [[mufloi]]
 *[[Belarussian]]: [[муфлон]]
@@ -34,7 +33,7 @@
 *Hungarian: [[muflon]]
 *Italian: [[muflone]] {{m}}
 *Japanese: [[ムフロン]] (mufuron)
-{{mid}}
+{{trans-mid}}
 *[[Ladin]]: [[muflon]]
 *Latin: [[Ovis aries musimon]] '' ''
 *Latvian: [[muflons]]
@@ -60,7 +59,7 @@
 *Ukrainian: [[муфлон]] ([[muflon]])
 *[[Upper Sorbian]]: [[muflon]]
 *Welsh: [[mwfflon]]
-{{bottom}}
+{{trans-bottom}}
 
 [[Category:Mammals]]
 
