--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -3,16 +3,14 @@
 [[Image:Zwijntje.JPG|thumb|A wild boar]]
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /'waɪld bɔʊɽ/
+*{{IPA|/'waɪldˈbɔʊɽ/}}
 
 ===Noun===
-'''wild boar'''
+{{en-noun|sg=[[wild]] [[boar]]}}
 
 # A [[pig]], scientific name ''[[Sus scrofa]]''.
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Translations)}}
-
+====Translations====
 {{trans-top|pig}}
 *Albanian: [[derri i egër]]
 *[[Basque]]: [[basurde]]
