--- a/en/l/least weasel.8233.wikitext
+++ b/en/l/least weasel.8233.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/'liːstˈwizəl/}}
+* {{IPA|/'liːstˈwizəl/}}
 
 ===Noun===
 {{wikipedia}}
@@ -11,59 +11,60 @@
 
 ====Translations====
 {{trans-top|Weasel}}
-*Albanian: [[nuse e lalës]]
-*[[Basque]]: [[erbinude]]
-*Belarusian: [[ласка]]
-*[[Breton]]: [[kaerell]]
-*Bulgarian: [[невестулка]] ([[nevestulka]])
-*[[Catalan]]: [[mostela]]
-*Croatian: [[lasica]]
-*Czech: [[lasice]], [[kolčava]]
-*Danish: [[brud]]
-*Dutch: [[wezel]] {{m}}
-*Esperanto: [[mustelo]]
-*Estonian: [[nirk]]
-*Finnish: [[lumikko]]
-*French: [[belette]] {{f}}
-*[[Frisian]]: [[wezeling]]
-*[[Friulian]]: [[bilite]]
-*[[Galician]]: [[donicela]], [[denociña]]
-*German: [[Wiesel]] {{n}}
-*Greek: [[νυφίτσα]] '' ''
-*Hungarian: [[menyét]]
-*Icelandic: [[hreysiköttur]], [[vesla]]
-*Irish: [[bláthnaid ghallda]]
-*Italian: [[donnola]] {{f}}
-*Korean: [[무산쇠족제비]] (musansoejokjebi)
+* Albanian: [[nuse e lalës]]
+* [[Basque]]: [[erbinude]]
+* Belarusian: [[ласка]]
+* [[Breton]]: [[kaerell]]
+* Bulgarian: [[невестулка]] ([[nevestulka]])
+* [[Catalan]]: [[mostela]]
+* Croatian: [[lasica]]
+* Czech: [[lasice]], [[kolčava]]
+* Danish: [[brud]]
+* Dutch: [[wezel]] {{m}}
+* Esperanto: [[mustelo]]
+* Estonian: [[nirk]]
+* Finnish: [[lumikko]]
+* French: [[belette]] {{f}}
+* [[Frisian]]: [[wezeling]]
+* [[Friulian]]: [[bilite]]
+* [[Galician]]: [[donicela]], [[denociña]]
+* German: [[Wiesel]] {{n}}
+* Greek: [[νυφίτσα]] '' ''
+* Hungarian: [[menyét]]
+* Icelandic: [[hreysiköttur]], [[vesla]]
+* Irish: [[bláthnaid ghallda]]
+* Italian: [[donnola]] {{f}}
+* Korean: [[무산쇠족제비]] (musansoejokjebi)
 {{trans-mid}}
-*[[Ladin]]: [[belora]]
-*Latin: [[Mustela nivalis]] '' ''
-*Latvian: [[zebiekste]]
-*Lithuanian: [[žebenkštis]]
-*[[Lower Sorbian]]: [[łasyca]], [[łasycka]]
-*Macedonian: [[невестулка]] ([[nevestulka]])
-*Maltese: [[ballottra]]
-*Norwegian: [[snømus]]
-*[[Occitan]]: [[mostèla]], [[polida]]
-*Polish: [[łasica]] '' ''
-*Portuguese: [[doninha]]
-*Romanian: [[nevăstuica]]
-*[[Romansh]]: [[mustaila]]
-*[[Romany]]: [[boriori]] {{f}}
-*Russian: [[ласка]] ([[laska]]) '' ''
-*[[Sami]]: [[nirpi]]
-*[[Sardinian]]: [[bucca de mele]], [[bucchemeli]]
-*[[Scottish Gaelic]]: [[neas bheag]]
-*Serbian: [[ласица]] ([[lasica]])
-*Slovak: [[lasica]]
-*Slovenian: [[podlasica]]
-*Spanish: [[mostela]] {{f}}
-*Swedish: [[vessla]]
-*Turkish: [[gelincik]]
-*Ukrainian: [[ласиця]] ([[lasicja]])
-*[[Upper Sorbian]]: [[kohlica]]
-*Welsh: [[bronwen]], [[gwenci]]
+* [[Ladin]]: [[belora]]
+* Latin: [[Mustela nivalis]] '' ''
+* Latvian: [[zebiekste]]
+* Lithuanian: [[žebenkštis]]
+* [[Lower Sorbian]]: [[łasyca]], [[łasycka]]
+* [[Macedonian]]: [[невестулка]] ([[nevestulka]])
+* Maltese: [[ballottra]]
+* Norwegian: [[snømus]]
+* [[Occitan]]: [[mostèla]], [[polida]]
+* Polish: [[łasica]] '' ''
+* Portuguese: [[doninha]]
+* Romanian: [[nevăstuica]]
+* [[Romansh]]: [[mustaila]]
+* [[Romany]]: [[boriori]] {{f}}
+* Russian: [[ласка]] ([[laska]]) '' ''
+* [[Sami]]: [[nirpi]]
+* [[Sardinian]]: [[bucca de mele]], [[bucchemeli]]
+* [[Scottish Gaelic]]: [[neas bheag]]
+* Serbian: [[ласица]] ([[lasica]])
+* Slovak: [[lasica]]
+* Slovenian: [[podlasica]]
+* Spanish: [[mostela]] {{f}}
+* Swedish: [[vessla]]
+* Turkish: [[gelincik]]
+* Ukrainian: [[ласиця]] ([[lasicja]])
+* [[Upper Sorbian]]: [[kohlica]]
+* Welsh: [[bronwen]], [[gwenci]]
 {{trans-bottom}}
 
 [[Category:Mammals]]
+
 [[ru:least weasel]]
