--- a/en/v/vorticose.856047.wikitext
+++ b/en/v/vorticose.856047.wikitext
@@ -5,3 +5,7 @@
 
 # Feminine plural form of [[vorticoso]]
 [[Category:Italian adjective forms]]
+
+[[pl:vorticose]]
+[[ru:vorticose]]
+[[zh:vorticose]]
