--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -29,7 +29,7 @@
 # [[determined|Determined]] or [[insistent]].
 #:''He was '''bent''' on going to Texas, but not even he could say why.''
 # Of a person leading a life of [[crime]].
-# {{context|slang|football}} [[inaccurate]] at [[shooting]]
+# {{context|slang|pejorative|football}} [[inaccurate]] at [[shooting]]
 #:''That shot he took was so '''bent'''.''
 
 ====Synonyms====
