--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -10,7 +10,9 @@
 # The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
 # The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
 
+[[el:Ισραήλ]]
 [[fr:Ισραήλ]]
+[[lt:Ισραήλ]]
 [[hu:Ισραήλ]]
 [[sv:Ισραήλ]]
 [[tr:Ισραήλ]]
