--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -35,7 +35,7 @@
 
 ====Translations====
 {{trans-top|area of land surrounded by water}}
-* {{trreq|Afrikaans}}
+* Afrikaans: [[eiland]]
 * Albanian: {{t-|sq|ishull|m|xs=Albanian}}, {{t-|sq|ujdhesë|f|xs=Albanian}}
 * {{trreq|Armenian}}
 * {{trreq|Basque}}
