template -AHD +enPR <break#3537098>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -7,7 +7,7 @@
 {{OE.}} ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
 ===Pronunciation===
-* {{AHD|/brāk/}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
+* {{enPR|/brāk/}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
 * {{audio|en-us-break.ogg|Audio (US)}}
 * Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
 
@@ -317,11 +317,11 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*{{ttbc|Chumash (Inezeño)}}: [[kʼot]]
-*{{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
-*{{ttbc|Irish}}: [[bris#Irish|bris]]
-*{{ttbc|Latin}}: [[rumpere]], [[frangere]]
-*{{ttbc|Spanish}}: [[romper#Spanish|romper]]
+* {{ttbc|Chumash (Inezeño)}}: [[kʼot]]
+* {{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
+* {{ttbc|Irish}}: [[bris#Irish|bris]]
+* {{ttbc|Latin}}: [[rumpere]], [[frangere]]
+* {{ttbc|Spanish}}: [[romper#Spanish|romper]]
 
 ===Noun===
 {{en-noun}}
