--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -30,7 +30,7 @@
 #:''He was '''bent''' on going to Texas, but not even he could say why.''
 # Of a person leading a life of [[crime]].
 # {{context|slang|football}} [[inaccurate]] at [[shooting]]
-#:''That shot he took was so '''bent'''.''
+#:''That shot was so '''bent''' it left the pitch.''
 
 ====Synonyms====
 *(1): [[crooked]]
