--- a/en/i/interbank.742378.wikitext
+++ b/en/i/interbank.742378.wikitext
@@ -6,9 +6,8 @@
 # Of, pertaining to, or taking place between two or more [[bank]]s
 
 ====Translations====
-{{top}}
+{{trans-top|of, pertaining to, or taking place between two or more banks}}
 *French: [[interbancaire]]
 *Italian: [[interbancario]]
-{{mid}}
-
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
