--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -61,13 +61,13 @@
 * Hindi: [[द्वीप]]
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: [[ey]] {{f}}, [[eyja]]
-* Italian: {{t+|it|isola|f}}, {{t-|it|isole|p}}
+* Italian: {{t+|it|isola|f}}
 * Japanese: [[島]] ([[しま]], shimá)
 * {{trreq|Kannada}}
 * Khmer: {{KMchar|[[កោះ]]}} (goh)
 * {{trreq|Lao}}
 {{trans-mid}}
-* Latin: {{t+|la|insula|f}}, {{t+|la|insulae|p}}
+* Latin: {{t+|la|insula|f}}
 * Latvian: {{t-|lv|sala|f|xs=Latvian}}
 * Lithuanian: {{t+|lt|sala|f}}
 * {{trreq|Maltese}}
@@ -79,7 +79,7 @@
 * {{trreq|Oriya}}
 * {{trreq|Persian}}
 * Polish: {{t+|pl|wyspa|f}}
-* Portuguese: {{t+|pt|ilha|f}}, {{t+|pt|ilhas|p}}
+* Portuguese: {{t+|pt|ilha|f}}
 * {{trreq|Punjabi}}
 * Romanian: {{t|ro|insulă|f}}
 * Romansch: {{t|rm|insla|f}}
