--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -14,13 +14,20 @@ Ultimately from ''[[dudde]]'' (ragged clothing''), of uncertain origin beyond th
 # {{obsolete}} Clothes, now always used in plural form [[duds]].
 
 ====Translations====
-{{rfc-trans}}
-{{trans-top|}}
-*Finnish: [[susi]], [[suutari]]
-*German: [[Blindgänger]] {{m}}
+{{trans-top|a broken or nonfunctional device that does not perform its intended function}}
 {{trans-mid}}
-*Russian: [[невзрывающийся]] (nevzryvájuščijsja)
 {{trans-bottom}}
+
+{{trans-top|''(obsolete)'' clothes, now always used in plural form (duds)}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+*{{ttbc|Finnish}}: [[susi]], [[suutari]]
+*{{ttbc|German}}: [[Blindgänger]] {{m}}
+{{checktrans-mid}}
+*{{ttbc|Russian}}: [[невзрывающийся]] (nevzryvájuščijsja)
+{{checktrans-bottom}}
 
 ----
 
