--- a/en/r/revest.855934.wikitext
+++ b/en/r/revest.855934.wikitext
@@ -5,5 +5,6 @@
 
 # To return (property) to a former owner; to [[reinstate]]
 # To re-award an [[office]] of authority
+# The [[subsumption]] of a [[w:hereditary title|hereditary title of honour or nobility]] back into the [[w:fount of honour|fount of honour]] upon it's [[alienation]].
 
 [[zh:revest]]
