--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -39,7 +39,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 {{trans-top|a separate entity or concept}}
 * {{trreq|Afrikaans}}
 * Albanian: {{t-|sq|send|m|xs=Albanian}}
-* Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
+* Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
 * {{trreq|Armenian}}
 * [[Basque]]: [[gauza]]
 * {{trreq|Belarusian}}
@@ -61,7 +61,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
 * [[Frisian]]: [[ding]] {{n}}
 * [[Galician]]: [[cousa]] {{f}}
-* {{trreq|Georgian}}
+* Georgian: [[ნივთი]] (nivt‘i), [[საგანი]] (sagani)
 * German: {{t+|de|Ding|n}}
 * Greek: {{t+|el|πράγμα|n|tr=prágma|sc=Grek}}
 * [[Guarani]]: [[mba'e]]
@@ -105,18 +105,18 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 * Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
 * {{trreq|Tamil}}
-* {{trreq|Thai}}
+* Thai: {{Thai|[[สิ่งของ]]}} (sìng kŏng), {{Thai|[[สิ่ง]]}} (sìng)
 * [[Tupinambá]]: [[mba'e]]
 * {{trreq|Turkish}}
 * Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
 * {{trreq|Vietnamese}}
 * Welsh: {{t-|cy|peth|m|xs=Welsh}}
-* {{trreq|Yiddish}}
+* Yiddish: [[זאַך]] (zakh) {{f}}, [[חפֿץ]] (kheyfets) {{m}}
 {{trans-bottom}}
 
 {{trans-top|any physical or psychical entity}}
 * Albanian: {{t-|sq|send|xs=Albanian}}
-* Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
+* Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
 * [[Basque]]: [[gauza]]
 * CJKV Characters: [[物]], [[事]]
 * Chinese:
