/* Interjection */ *[[yeah right]] <yeah#3560829>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -64,6 +64,9 @@
 # Expressing [[joy]], [[celebration]], [[glee]], etc.
 #:'''Yeah!''' We did it!''
 
+====Derived terms====
+*[[yeah right]]
+
 ====Translations====
 {{trans-top|expressing joy}}
 *Finnish: [[jee]]
