--- a/en/b/bunny hop.855593.wikitext
+++ b/en/b/bunny hop.855593.wikitext
@@ -5,5 +5,5 @@
 {{wikipedia|bunny_hop_(dance)|bunny hop}}
 {{en-noun|sg=[[bunny]] [[hop]]}}
 
-# {{context|mainly|US|idiom}} A [[dance]] from the [[big band]] era, a variation of the [[conga]].
-# {{context|cycling}} A jump made where both wheels leave the ground.
+# {{mainly|US|idiom}} A [[dance]] from the [[big band]] era, a variation of the [[conga]].
+# {{cycling}} A jump made where both wheels leave the ground.
