trans link [[Volapük]] <yeah#3561842>

--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -2,10 +2,10 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/jɛ/}} or {{IPAchar|/jɛə/}}
-*{{audio|en-us-yeah.ogg|Audio (US)}}
-*{{audio|en-us-yeah-interjection.ogg|Audio (US)}}
-*{{rhymes|ɛə}}
+* {{IPA|/jɛ/}} or {{IPAchar|/jɛə/}}
+* {{audio|en-us-yeah.ogg|Audio (US)}}
+* {{audio|en-us-yeah-interjection.ogg|Audio (US)}}
+* {{rhymes|ɛə}}
 
 ===Adverb===
 '''yeah'''
@@ -16,45 +16,45 @@
 ''Note: Many languages have no equivalent of this word; in those cases, the translations given here are for'' '''yes'''.
 
 {{trans-top|yes}}
-*Bosnian: [[ja#Bosnian|ja]]
-*Croatian: [[ja#Croatian|ja]]
-*Czech: [[jo#Czech|jo]]
-*Dutch: [[ja#Dutch|ja]], [[jawel]]
-*French: [[ouais]]
-*Finnish: [[joo]], [[juu]]
-*German: [[ja]]
-*Hindi: [[हाँ]] (hā̃)
-*[[Interlingua]]: [[si#Interlingua|si]]
-*Italian: [[si#Italian|si]]
+* Bosnian: [[ja#Bosnian|ja]]
+* Croatian: [[ja#Croatian|ja]]
+* Czech: [[jo#Czech|jo]]
+* Dutch: [[ja#Dutch|ja]], [[jawel]]
+* French: [[ouais]]
+* Finnish: [[joo]], [[juu]]
+* German: [[ja]]
+* Hindi: [[हाँ]] (hā̃)
+* [[Interlingua]]: [[si#Interlingua|si]]
+* Italian: [[si#Italian|si]]
 {{trans-mid}}
-*Polish: [[tak]]
-*Portuguese: [[sim]]
-*Russian: [[ага]]
-*Serbian:
-*:Cyrillic: [[ја#Serbian|ја]]
-*:Roman: [[ja#Serbian|ja]]
-*Slovak: [[no#Slovak|no]] <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
-*Spanish: [[si]]
-*Vietnamese: [[ừ]] (informal; does translate as "yeah")
-*Volapük: [[si#Volapük|si]]
-*Welsh: [[iah]] (pronounced "ee-ah"), Welsh-Celtic precursor of English "yeah."
+* Polish: [[tak]]
+* Portuguese: [[sim]]
+* Russian: [[ага]]
+* Serbian:
+*: Cyrillic: [[ја#Serbian|ја]]
+*: Roman: [[ja#Serbian|ja]]
+* Slovak: [[no#Slovak|no]] <!-- Yes, this is in the right place, no means yeah or yep in Slovak -->
+* Spanish: [[si]]
+* Vietnamese: [[ừ]] (informal; does translate as "yeah")
+* [[Volapük]]: [[si#Volapük|si]]
+* Welsh: [[iah]] (pronounced "ee-ah"), Welsh-Celtic precursor of English "yeah."
 
 {{trans-bottom}}
 
 ====Synonyms====
-*[[yep]]
-*[[yup]]
-*[[yea]]
-*[[yes]]
-*[[uh-huh]]
+* [[yep]]
+* [[yup]]
+* [[yea]]
+* [[yes]]
+* [[uh-huh]]
 
 ====Synonyms====
-*(''agreement''): [[yep]], [[yup]]
-*(''joy''): [[hurrah]], [[hurray]], [[yay]], [[yippee]] <!--etc-->
+* (''agreement''): [[yep]], [[yup]]
+* (''joy''): [[hurrah]], [[hurray]], [[yay]], [[yippee]] <!--etc-->
 
 ====Translations====
 {{trans-top|expressing agreement}}
-*Finnish: [[joo]]
+* Finnish: [[joo]]
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -62,19 +62,19 @@
 '''yeah'''
 
 # Expressing [[joy]], [[celebration]], [[glee]], etc.
-#:'''Yeah!''' We did it!''
+#: '''Yeah!''' We did it!''
 
 ====Derived terms====
-*[[yeah right]]
+* [[yeah right]]
 
 ====Translations====
 {{trans-top|expressing joy}}
-*Finnish: [[jee]]
+* Finnish: [[jee]]
 {{trans-mid}}
 {{trans-bottom}}
 
 ===See also===
-*[[yes]]
+* [[yes]]
 
 [[Category:English interjections]]
 
