--- a/en/f/FM.26231.wikitext
+++ b/en/f/FM.26231.wikitext
@@ -7,7 +7,7 @@
 
 ==={{abbreviation}}===
 '''FM'''
-#[[Federated States of Micronesia]], a member state of the [[United Nations]].
+#{{geography}}[[Federated States of Micronesia]], a member state of the [[United Nations]].
 
 [[de:FM]]
 [[et:FM]]
