--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -19,20 +19,21 @@
 
 ====Translations====
 {{top}}
-* {{trreq|Arabic}}
+* Arabic: {{Arab|[[افسد]]}} (’áfsada), {{Arab|[[فسد]]}} (fásada)
 * {{trreq|Basque}}
-* {{trreq|Chinese}}
+* Chinese: [[腐化]] (fǔhuà)
 * Dutch: [[rotten]], [[vergaan]]
 * Finnish: [[mädäntyä]]
 * French: [[pourrir]]
+* Georgian: [[ლპობა]] (lpoba), [[დალპობა]] (dalpoba), [[ჩალპობა]] (čalpoba), [[ხრწნა]] (xrts‘na)
 * German: [[verrotten]], [[verderben]]
 * {{trreq|Greek}}
 * {{trreq|Italian}}
 {{mid}}
-* {{trreq|Japanese}}
-* {{trreq|Korean}}
-* {{trreq|Latin}}
-* Russian: [[гнить]]
+* Japanese: [[腐る]] (くさる, kusáru)
+* Korean: [[썩다]] (sseokda), [[부패하아]] (bupaehada)
+* Latin: [[putesco#Latin|pūtesco]], [[tabesco#Latin|tābesco]]
+* Russian: [[гнить]] (gnit’)
 * Romanian: [[putrezi]], [[descompune]]
 * Spanish: [[pudrir]], [[podrir]]
 * Swedish: [[ruttna]]
