--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -20,7 +20,7 @@
 * Dutch: [[aanleg]] {{m}}
 * Old English: [[geap|ġēap]] (1)
 * Swedish: [[böjelse]]
-* Romanian: [[îndoit]]
+* Romanian: [[îndoit]][[înclinat]]
 
 ===Adjective===
 {{en-adj}}
