--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -99,9 +99,10 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-top|to rise up in bubbles}}
 * Finnish: [[kuplia]], [[poreilla]]
 * Hungarian: [[buborékol]], [[bugyborékol]]
-{{trans-mid}}
 * Korean: [[부글]]거리다 (bugeul-georida)
+{{trans-mid}}
 * Kurdish: {{KUchar|[[بڵق کردن]]}}, {{KUchar|[[بڵقه‌بڵق کردن]]}}
+* Spanish: [[burbujear]]
 * Swedish: {{t-|sv|bubbla}}
 {{trans-bottom}}
 
