--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -3,7 +3,7 @@
 From the Latin ''[[quattuordecim]]'' meaning fourteen.
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /ka.tɔʁz/
+*{{IPA|lang=fr|/ka.tɔʁz/}}
 *[[w:SAMPA|SAMPA]]: /ka.tORz/
 
 ===Cardinal number===
