--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -55,7 +55,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 ==French==
 
 ===Pronunciation===
-*[[w:IPA|IPA]]: /myl.ti.pli.ka.sjɔ̃/
+*{{IPA|lang=fr|/myl.ti.pli.ka.sjɔ̃/}}
 *[[w:SAMPA|SAMPA]]: /myl.ti.pli.ka.sjO~/
 
 ===Noun===
