--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -8,3 +8,4 @@
 #*:There lurks no bribe in the smell and beauty of the flower. It's charm has no '''ulterior motive'''.
 #*'''1941''', "[http://www.time.com/time/magazine/article/0,9171,849702,00.html Poetry]," ''Time'', 8 Dec.,
 #*:The poet is a man without a profit or any other kind of '''ulterior motive'''.
+{{rfd|What's next, [[red hen]]?}}
