--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
 ===Phrase===
-'''at the [[end]] of one’s [[tether]]'''
+'''[[at]] [[the]] [[end]] [[of]] [[one]][['s|’s]] [[tether]]'''
 
-#{{idiom}} at the [[limit]] of one’s [[patience]]. [[frustrated]] or [[annoyed]]
+# {{idiom}} At the [[limit]] of one’s [[patience]]; [[frustrated]] or [[annoyed]].
 
 [[Category:English prepositional phrases]]
