--- a/en/m/Markovian.776104.wikitext
+++ b/en/m/Markovian.776104.wikitext
@@ -14,3 +14,5 @@
 
 #{{statistics|of a process}} Exhibiting the [[w:Markov property|Markov property]], in which the conditional probability distribution of future states of the process, given the present state and all past states, depends only upon the present state and not on any past states.
 {{pedialite|Markov property|the Markov property}}
+
+[[ar:Markovian]]
