changed grammatically incorrect "it's" to "its".  Was spelling "it's" in original web public domain source, but is obviously a typo. <ulterior motive#3590541>

--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -5,7 +5,7 @@
 
 # A [[secret]] [[alternative]] [[reason]] for doing something that differs from the stated reason.
 #*'''1895''', [[w:Arthur_Conan_Doyle|Arthur Conan Doyle]], ''The Stark Munro Letters'', ch. 9,
-#*:There lurks no bribe in the smell and beauty of the flower. It's charm has no '''ulterior motive'''.
+#*:There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.
 #*'''1941''', "[http://www.time.com/time/magazine/article/0,9171,849702,00.html Poetry]," ''Time'', 8 Dec.,
 #*:The poet is a man without a profit or any other kind of '''ulterior motive'''.
 {{rfd|What's next, [[red hen]]?}}
